--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
   </div>
 
   <div class="text-xl font-semibold text-white ml-10 flex items-center mt-10 space-x-5 justify-center">
-    <a href="#" class=" border-red-500 border-2 bg-red-500 rounded px-10 py-2 flex"><img src="NicePng_google-logo-white-png_134988.png" class="w-6 space-x-2 justify-center " alt="goo">Google</a>
-    <a href="#" class=" border-sky-700 border-2 bg-sky-700 rounded px-8 py-2 flex"><img src="facebook-logo-png-38369 (1).png" class="w-6 space-x-2 justify-center " alt="fb">Facebook</a>
+    <a href="#" class=" border-red-500 border-2 bg-red-500 rounded px-10 py-2 flex"><img src="123.jfif" class="w-6 space-x-2 justify-center " alt="goo">Google</a>
+    <a href="#" class=" border-sky-700 border-2 bg-sky-700 rounded px-8 py-2 flex"><img src="1234.jfif" class="w-6 space-x-2 justify-center " alt="fb">Facebook</a>
     
 </body>
 </html>
